@@ -1,0 +1,40 @@
+#!/opt/perl/bin/perl
+use strict;
+use AnyEvent;
+use BS::HTTPD;
+use BS::HTTPD::Appgets;
+
+my $cvar = AnyEvent->condvar;
+
+my $httpd = BS::HTTPD->new (port => 9090);
+
+my $t;
+
+$httpd->reg_cb (
+   _ => sub {
+      my ($httpd, $url, $headers) = @_;
+
+      $httpd->o (capture {
+         o ("<html><body><h1>Hello World!</h1>");
+         o ("<a href=\"/test\">another test page</a>");
+         o ("</body></html>");
+      });
+
+      () # !
+   },
+   _test => sub {
+      my ($httpd, $url, $headers, $respcb) = @_;
+
+      $t = AnyEvent->timer (after => 2, cb => sub {
+         my $o = capture {
+            o ("CPU info:\n\n");
+            o (`cat /proc/cpuinfo`);
+         };
+         $respcb->([200, "ok", { 'Content-Type' => 'text/plain' }, $o]);
+      });
+
+      'delay'
+   },
+);
+
+$cvar->wait;
